--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Registro utenti</h1>
 
-    <div>
+    <div id="searchedUsers">
       <h2>CERCA UTENTI PER COGNOME</h2>
 
       <label id="searchUsersBox" for="searchUsersInput">
@@ -20,10 +20,8 @@
         <i id="searchUsersButton" class="fa fa-search" aria-hidden="true" alt="invia ricerca"></i>
       </label>
 
-      <table id="searchUsersTable">
-        <thead id="searchUsersTableHead"></thead>
-        <tbody id="searchUsersTableBody"></tbody>
-      </table>
+      <div id="searchResponseBox">
+      </div>
     </div>
 
     <div id="allUsers">
