Working sort with reverse

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div id="minorUsers">
-      <h2>UTENTI MINORI</h2>
+      <h2>UTENTI MINORENI</h2>
 
       <table id="minorUsersTable">
         <thead id="minorUsersTableHead"></thead>
